POWR-88 Add puthauto setting. Add a template for Event.

--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -6,6 +6,7 @@ dependencies:
     - node.type.alert
     - node.type.building
     - node.type.city_service
+    - node.type.event
     - node.type.guide
     - node.type.information
     - node.type.news
@@ -72,6 +73,7 @@ type_settings:
       - alert
       - building
       - city_service
+      - event
       - guide
       - information
       - news
