--- a/web/sites/default/config/core.entity_form_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.event.default.yml
@@ -6,8 +6,10 @@ dependencies:
     - field.field.node.event.field_body
     - field.field.node.event.field_end_date
     - field.field.node.event.field_end_time
+    - field.field.node.event.field_event_location
     - field.field.node.event.field_start_date
     - field.field.node.event.field_start_time
+    - field.field.node.event.field_summary
     - node.type.event
   module:
     - content_moderation
@@ -26,7 +28,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_body:
-    weight: 10
+    weight: 11
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -49,6 +51,18 @@ content:
     third_party_settings: {  }
     type: time_widget
     region: content
+  field_event_location:
+    type: entity_reference_paragraphs
+    weight: 10
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    region: content
   field_start_date:
     weight: 6
     settings: {  }
@@ -61,9 +75,17 @@ content:
     third_party_settings: {  }
     type: time_widget
     region: content
+  field_summary:
+    weight: 5
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   moderation_state:
     type: moderation_state_default
-    weight: 4
+    weight: 12
     settings: {  }
     region: content
     third_party_settings: {  }
@@ -71,7 +93,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 5
+    weight: 4
     region: content
     third_party_settings: {  }
   sticky:
