--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -6,8 +6,10 @@ dependencies:
     - field.field.node.event.field_body
     - field.field.node.event.field_end_date
     - field.field.node.event.field_end_time
+    - field.field.node.event.field_event_location
     - field.field.node.event.field_start_date
     - field.field.node.event.field_start_time
+    - field.field.node.event.field_summary
     - node.type.event
   module:
     - datetime
@@ -27,7 +29,7 @@ bundle: event
 mode: default
 content:
   field_body:
-    weight: 4
+    weight: 6
     label: hidden
     settings:
       view_mode: default
@@ -36,7 +38,7 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_end_date:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       timezone_override: ''
@@ -45,14 +47,23 @@ content:
     type: datetime_default
     region: content
   field_end_time:
-    weight: 3
+    weight: 4
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: time_formatter
     region: content
+  field_event_location:
+    type: entity_reference_revisions_entity_view
+    weight: 5
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
   field_start_date:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       timezone_override: ''
@@ -61,15 +72,20 @@ content:
     type: datetime_default
     region: content
   field_start_time:
-    weight: 1
+    weight: 2
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: time_formatter
     region: content
-  links:
-    weight: 5
-    region: content
-    settings: {  }
+  field_summary:
+    weight: 0
+    label: hidden
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
-hidden: {  }
+    type: string
+    region: content
+hidden:
+  content_moderation_control: true
+  links: true
