POWR-88 Add validation. Tweak date format.

--- a/web/sites/default/config/core.date_format.month_and_day.yml
+++ b/web/sites/default/config/core.date_format.month_and_day.yml
@@ -3,6 +3,6 @@ langcode: en
 status: true
 dependencies: {  }
 id: month_and_day
-label: 'Month and day'
+label: 'Month Day'
 locked: false
 pattern: 'F j'
