--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -42,7 +42,7 @@ content:
     label: hidden
     settings:
       timezone_override: ''
-      format_type: month_and_day
+      format_type: weekday_month_day
     third_party_settings: {  }
     type: datetime_default
     region: content
@@ -67,7 +67,7 @@ content:
     label: hidden
     settings:
       timezone_override: ''
-      format_type: month_and_day
+      format_type: weekday_month_day
     third_party_settings: {  }
     type: datetime_default
     region: content
