--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -525,7 +525,7 @@ display:
           type: datetime_default
           settings:
             timezone_override: ''
-            format_type: month_and_day
+            format_type: weekday_month_day
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -581,7 +581,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: ''
+          empty: 'All day'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -651,7 +651,7 @@ display:
           type: datetime_default
           settings:
             timezone_override: ''
-            format_type: month_and_day
+            format_type: weekday_month_day
           group_column: value
           group_columns: {  }
           group_rows: true
