--- a/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
@@ -17,4 +17,10 @@ content:
     weight: 100
     region: content
 hidden:
+  field_body: true
+  field_end_date: true
+  field_end_time: true
+  field_event_location: true
   field_start_date: true
+  field_start_time: true
+  field_summary: true
