POWR-88 Add module "conditional_fields" for all day events.

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "drupal/bootstrap_paragraphs": "^2.0@beta",
         "drupal/chosen": "^2.5",
         "drupal/components": "^1.0",
+        "drupal/conditional_fields": "^1.0@alpha",
         "drupal/console": "^1.0.2",
         "drupal/copyright_block": "^1.0@RC",
         "drupal/core": "~8.5",
