--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.event.field_all_day
     - field.field.node.event.field_body
     - field.field.node.event.field_end_date
     - field.field.node.event.field_end_time
@@ -28,8 +29,18 @@ targetEntityType: node
 bundle: event
 mode: default
 content:
+  field_all_day:
+    weight: 1
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
   field_body:
-    weight: 6
+    weight: 7
     label: hidden
     settings:
       view_mode: default
@@ -38,7 +49,7 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_end_date:
-    weight: 3
+    weight: 4
     label: hidden
     settings:
       timezone_override: ''
@@ -47,7 +58,7 @@ content:
     type: datetime_default
     region: content
   field_end_time:
-    weight: 4
+    weight: 5
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -55,7 +66,7 @@ content:
     region: content
   field_event_location:
     type: entity_reference_revisions_entity_view
-    weight: 5
+    weight: 6
     label: hidden
     settings:
       view_mode: default
@@ -63,7 +74,7 @@ content:
     third_party_settings: {  }
     region: content
   field_start_date:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       timezone_override: ''
@@ -72,7 +83,7 @@ content:
     type: datetime_default
     region: content
   field_start_time:
-    weight: 2
+    weight: 3
     label: hidden
     settings: {  }
     third_party_settings: {  }
