--- a/web/sites/default/config/field.field.node.event.field_summary.yml
+++ b/web/sites/default/config/field.field.node.event.field_summary.yml
@@ -16,7 +16,7 @@ field_name: field_summary
 entity_type: node
 bundle: event
 label: Summary
-description: ''
+description: 'Brief description of this event.'
 required: false
 translatable: true
 default_value: {  }
