POWR-233 Update banner to show on draft and link image

--- a/web/sites/default/config/views.view.group_content_banner.yml
+++ b/web/sites/default/config/views.view.group_content_banner.yml
@@ -123,7 +123,7 @@ display:
           type: image
           settings:
             image_style: logo
-            image_link: ''
+            image_link: content
           group_column: ''
           group_columns: {  }
           group_rows: true
@@ -200,18 +200,7 @@ display:
           entity_type: group
           entity_field: label
           plugin_id: field
-      filters:
-        status:
-          value: '1'
-          table: node_field_data
-          field: status
-          plugin_id: boolean
-          entity_type: node
-          entity_field: status
-          id: status
-          expose:
-            operator: ''
-          group: 1
+      filters: {  }
       sorts: {  }
       title: ''
       header: {  }
