POWR-88 Update group permissions for Event content type.

--- a/web/sites/default/config/group.role.elected_official-admin.yml
+++ b/web/sites/default/config/group.role.elected_official-admin.yml
@@ -31,21 +31,30 @@ permissions:
   16: 'view unpublished group_node:news entity'
   17: 'create group_node:news content'
   18: 'view group_node:news content'
-  29: 'create group_node:guide entity'
-  30: 'delete any group_node:guide entity'
-  31: 'delete own group_node:guide entity'
-  32: 'update any group_node:guide entity'
-  33: 'update own group_node:guide entity'
-  34: 'view group_node:guide entity'
-  35: 'view unpublished group_node:guide entity'
-  36: 'create group_node:guide content'
-  37: 'view group_node:guide content'
-  38: 'create group_node:information entity'
-  39: 'delete any group_node:information entity'
-  40: 'delete own group_node:information entity'
-  41: 'update any group_node:information entity'
-  42: 'update own group_node:information entity'
-  43: 'view group_node:information entity'
-  44: 'view unpublished group_node:information entity'
-  45: 'create group_node:information content'
-  46: 'view group_node:information content'
+  19: 'create group_node:guide entity'
+  20: 'delete any group_node:guide entity'
+  21: 'delete own group_node:guide entity'
+  22: 'update any group_node:guide entity'
+  23: 'update own group_node:guide entity'
+  24: 'view group_node:guide entity'
+  25: 'view unpublished group_node:guide entity'
+  26: 'create group_node:guide content'
+  27: 'view group_node:guide content'
+  28: 'create group_node:information entity'
+  29: 'delete any group_node:information entity'
+  30: 'delete own group_node:information entity'
+  31: 'update any group_node:information entity'
+  32: 'update own group_node:information entity'
+  33: 'view group_node:information entity'
+  34: 'view unpublished group_node:information entity'
+  35: 'create group_node:information content'
+  36: 'view group_node:information content'
+  47: 'create group_node:event entity'
+  48: 'delete any group_node:event entity'
+  49: 'delete own group_node:event entity'
+  50: 'update any group_node:event entity'
+  51: 'update own group_node:event entity'
+  52: 'view group_node:event entity'
+  53: 'view unpublished group_node:event entity'
+  54: 'create group_node:event content'
+  55: 'view group_node:event content'
