--- a/web/sites/default/config/group.role.elected_official-anonymous.yml
+++ b/web/sites/default/config/group.role.elected_official-anonymous.yml
@@ -14,5 +14,6 @@ permissions_ui: true
 permissions:
   0: 'view group'
   1: 'view group_node:news entity'
-  3: 'view group_node:guide entity'
-  4: 'view group_node:information entity'
+  2: 'view group_node:guide entity'
+  3: 'view group_node:information entity'
+  5: 'view group_node:event entity'
