--- a/web/sites/default/config/group.role.program-admin.yml
+++ b/web/sites/default/config/group.role.program-admin.yml
@@ -46,12 +46,21 @@ permissions:
   31: 'view unpublished group_node:guide entity'
   32: 'create group_node:guide content'
   33: 'view group_node:guide content'
-  50: 'create group_node:information entity'
-  51: 'delete any group_node:information entity'
-  52: 'delete own group_node:information entity'
-  53: 'update any group_node:information entity'
-  54: 'update own group_node:information entity'
-  55: 'view group_node:information entity'
-  56: 'view unpublished group_node:information entity'
-  57: 'create group_node:information content'
-  58: 'view group_node:information content'
+  34: 'create group_node:information entity'
+  35: 'delete any group_node:information entity'
+  36: 'delete own group_node:information entity'
+  37: 'update any group_node:information entity'
+  38: 'update own group_node:information entity'
+  39: 'view group_node:information entity'
+  40: 'view unpublished group_node:information entity'
+  41: 'create group_node:information content'
+  42: 'view group_node:information content'
+  50: 'create group_node:event entity'
+  51: 'delete any group_node:event entity'
+  52: 'delete own group_node:event entity'
+  53: 'update any group_node:event entity'
+  54: 'update own group_node:event entity'
+  55: 'view group_node:event entity'
+  56: 'view unpublished group_node:event entity'
+  57: 'create group_node:event content'
+  58: 'view group_node:event content'
