--- a/web/sites/default/config/group.role.program-anonymous.yml
+++ b/web/sites/default/config/group.role.program-anonymous.yml
@@ -15,4 +15,5 @@ permissions:
   0: 'view group'
   1: 'view group_node:city_service entity'
   2: 'view group_node:news entity'
-  4: 'view group_node:information entity'
+  3: 'view group_node:information entity'
+  5: 'view group_node:event entity'
