--- a/web/sites/default/config/group.role.program-member.yml
+++ b/web/sites/default/config/group.role.program-member.yml
@@ -36,10 +36,17 @@ permissions:
   21: 'update own group_node:guide entity'
   22: 'view group_node:guide entity'
   23: 'view unpublished group_node:guide entity'
-  34: 'create group_node:information entity'
-  35: 'delete any group_node:information entity'
-  36: 'delete own group_node:information entity'
-  37: 'update any group_node:information entity'
-  38: 'update own group_node:information entity'
-  39: 'view group_node:information entity'
-  40: 'view unpublished group_node:information entity'
+  24: 'create group_node:information entity'
+  25: 'delete any group_node:information entity'
+  26: 'delete own group_node:information entity'
+  27: 'update any group_node:information entity'
+  28: 'update own group_node:information entity'
+  29: 'view group_node:information entity'
+  30: 'view unpublished group_node:information entity'
+  34: 'create group_node:event entity'
+  35: 'delete any group_node:event entity'
+  36: 'delete own group_node:event entity'
+  37: 'update any group_node:event entity'
+  38: 'update own group_node:event entity'
+  39: 'view group_node:event entity'
+  40: 'view unpublished group_node:event entity'
