--- a/web/sites/default/config/group.role.project-admin.yml
+++ b/web/sites/default/config/group.role.project-admin.yml
@@ -40,21 +40,30 @@ permissions:
   25: 'view unpublished group_node:city_service entity'
   26: 'create group_node:city_service content'
   27: 'view group_node:city_service content'
-  38: 'create group_node:guide entity'
-  39: 'delete any group_node:guide entity'
-  40: 'delete own group_node:guide entity'
-  41: 'update any group_node:guide entity'
-  42: 'update own group_node:guide entity'
-  43: 'view group_node:guide entity'
-  44: 'view unpublished group_node:guide entity'
-  45: 'create group_node:guide content'
-  46: 'view group_node:guide content'
-  47: 'create group_node:information entity'
-  48: 'delete any group_node:information entity'
-  49: 'delete own group_node:information entity'
-  50: 'update any group_node:information entity'
-  51: 'update own group_node:information entity'
-  52: 'view group_node:information entity'
-  53: 'view unpublished group_node:information entity'
-  54: 'create group_node:information content'
-  55: 'view group_node:information content'
+  28: 'create group_node:guide entity'
+  29: 'delete any group_node:guide entity'
+  30: 'delete own group_node:guide entity'
+  31: 'update any group_node:guide entity'
+  32: 'update own group_node:guide entity'
+  33: 'view group_node:guide entity'
+  34: 'view unpublished group_node:guide entity'
+  35: 'create group_node:guide content'
+  36: 'view group_node:guide content'
+  37: 'create group_node:information entity'
+  38: 'delete any group_node:information entity'
+  39: 'delete own group_node:information entity'
+  40: 'update any group_node:information entity'
+  41: 'update own group_node:information entity'
+  42: 'view group_node:information entity'
+  43: 'view unpublished group_node:information entity'
+  44: 'create group_node:information content'
+  45: 'view group_node:information content'
+  56: 'create group_node:event entity'
+  57: 'delete any group_node:event entity'
+  58: 'delete own group_node:event entity'
+  59: 'update any group_node:event entity'
+  60: 'update own group_node:event entity'
+  61: 'view group_node:event entity'
+  62: 'view unpublished group_node:event entity'
+  63: 'create group_node:event content'
+  64: 'view group_node:event content'
