--- a/web/sites/default/config/group.role.project-member.yml
+++ b/web/sites/default/config/group.role.project-member.yml
@@ -28,17 +28,24 @@ permissions:
   13: 'update own group_node:city_service entity'
   14: 'view group_node:city_service entity'
   15: 'view unpublished group_node:city_service entity'
-  18: 'create group_node:guide entity'
-  19: 'delete any group_node:guide entity'
-  20: 'delete own group_node:guide entity'
-  21: 'update any group_node:guide entity'
-  22: 'update own group_node:guide entity'
-  23: 'view group_node:guide entity'
-  24: 'view unpublished group_node:guide entity'
-  25: 'create group_node:information entity'
-  26: 'delete any group_node:information entity'
-  27: 'delete own group_node:information entity'
-  28: 'update any group_node:information entity'
-  29: 'update own group_node:information entity'
-  30: 'view group_node:information entity'
-  31: 'view unpublished group_node:information entity'
+  16: 'create group_node:guide entity'
+  17: 'delete any group_node:guide entity'
+  18: 'delete own group_node:guide entity'
+  19: 'update any group_node:guide entity'
+  20: 'update own group_node:guide entity'
+  21: 'view group_node:guide entity'
+  22: 'view unpublished group_node:guide entity'
+  23: 'create group_node:information entity'
+  24: 'delete any group_node:information entity'
+  25: 'delete own group_node:information entity'
+  26: 'update any group_node:information entity'
+  27: 'update own group_node:information entity'
+  28: 'view group_node:information entity'
+  29: 'view unpublished group_node:information entity'
+  32: 'create group_node:event entity'
+  33: 'delete any group_node:event entity'
+  34: 'delete own group_node:event entity'
+  35: 'update any group_node:event entity'
+  36: 'update own group_node:event entity'
+  37: 'view group_node:event entity'
+  38: 'view unpublished group_node:event entity'
