--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -12,34 +12,41 @@ audience: member
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  - 'view group'
-  - 'leave group'
-  - 'access group_node overview'
-  - 'create group_node:city_service entity'
-  - 'delete own group_node:city_service entity'
-  - 'update any group_node:city_service entity'
-  - 'update own group_node:city_service entity'
-  - 'view group_node:city_service entity'
-  - 'view unpublished group_node:city_service entity'
-  - 'delete any group_node:city_service entity'
-  - 'create group_node:news entity'
-  - 'delete any group_node:news entity'
-  - 'delete own group_node:news entity'
-  - 'update any group_node:news entity'
-  - 'update own group_node:news entity'
-  - 'view group_node:news entity'
-  - 'view unpublished group_node:news entity'
-  - 'create group_node:guide entity'
-  - 'delete any group_node:guide entity'
-  - 'delete own group_node:guide entity'
-  - 'update any group_node:guide entity'
-  - 'update own group_node:guide entity'
-  - 'view group_node:guide entity'
-  - 'view unpublished group_node:guide entity'
-  - 'create group_node:information entity'
-  - 'delete any group_node:information entity'
-  - 'delete own group_node:information entity'
-  - 'update any group_node:information entity'
-  - 'update own group_node:information entity'
-  - 'view group_node:information entity'
-  - 'view unpublished group_node:information entity'
+  0: 'view group'
+  1: 'leave group'
+  2: 'access group_node overview'
+  3: 'create group_node:city_service entity'
+  4: 'delete own group_node:city_service entity'
+  5: 'update any group_node:city_service entity'
+  6: 'update own group_node:city_service entity'
+  7: 'view group_node:city_service entity'
+  8: 'view unpublished group_node:city_service entity'
+  9: 'delete any group_node:city_service entity'
+  10: 'create group_node:news entity'
+  11: 'delete any group_node:news entity'
+  12: 'delete own group_node:news entity'
+  13: 'update any group_node:news entity'
+  14: 'update own group_node:news entity'
+  15: 'view group_node:news entity'
+  16: 'view unpublished group_node:news entity'
+  17: 'create group_node:guide entity'
+  18: 'delete any group_node:guide entity'
+  19: 'delete own group_node:guide entity'
+  20: 'update any group_node:guide entity'
+  21: 'update own group_node:guide entity'
+  22: 'view group_node:guide entity'
+  23: 'view unpublished group_node:guide entity'
+  24: 'create group_node:information entity'
+  25: 'delete any group_node:information entity'
+  26: 'delete own group_node:information entity'
+  27: 'update any group_node:information entity'
+  28: 'update own group_node:information entity'
+  29: 'view group_node:information entity'
+  30: 'view unpublished group_node:information entity'
+  34: 'create group_node:event entity'
+  35: 'delete any group_node:event entity'
+  36: 'delete own group_node:event entity'
+  37: 'update any group_node:event entity'
+  38: 'update own group_node:event entity'
+  39: 'view group_node:event entity'
+  40: 'view unpublished group_node:event entity'
