--- a/web/sites/default/config/group.role.elected_official-member.yml
+++ b/web/sites/default/config/group.role.elected_official-member.yml
@@ -22,17 +22,24 @@ permissions:
   7: 'update own group_node:news entity'
   8: 'view group_node:news entity'
   9: 'view unpublished group_node:news entity'
-  13: 'create group_node:guide entity'
-  14: 'delete any group_node:guide entity'
-  15: 'delete own group_node:guide entity'
-  16: 'update any group_node:guide entity'
-  17: 'update own group_node:guide entity'
-  18: 'view group_node:guide entity'
-  19: 'view unpublished group_node:guide entity'
-  20: 'create group_node:information entity'
-  21: 'delete any group_node:information entity'
-  22: 'delete own group_node:information entity'
-  23: 'update any group_node:information entity'
-  24: 'update own group_node:information entity'
-  25: 'view group_node:information entity'
-  26: 'view unpublished group_node:information entity'
+  10: 'create group_node:guide entity'
+  11: 'delete any group_node:guide entity'
+  12: 'delete own group_node:guide entity'
+  13: 'update any group_node:guide entity'
+  14: 'update own group_node:guide entity'
+  15: 'view group_node:guide entity'
+  16: 'view unpublished group_node:guide entity'
+  17: 'create group_node:information entity'
+  18: 'delete any group_node:information entity'
+  19: 'delete own group_node:information entity'
+  20: 'update any group_node:information entity'
+  21: 'update own group_node:information entity'
+  22: 'view group_node:information entity'
+  23: 'view unpublished group_node:information entity'
+  27: 'create group_node:event entity'
+  28: 'delete any group_node:event entity'
+  29: 'delete own group_node:event entity'
+  30: 'update any group_node:event entity'
+  31: 'update own group_node:event entity'
+  32: 'view group_node:event entity'
+  33: 'view unpublished group_node:event entity'
