--- a/web/sites/default/config/group.role.program-outsider.yml
+++ b/web/sites/default/config/group.role.program-outsider.yml
@@ -16,4 +16,5 @@ permissions:
   1: 'view group_node:city_service entity'
   2: 'view group_node:news entity'
   3: 'view group_node:guide entity'
-  6: 'view group_node:information entity'
+  4: 'view group_node:information entity'
+  6: 'view group_node:event entity'
