--- a/web/sites/default/config/group.role.project-anonymous.yml
+++ b/web/sites/default/config/group.role.project-anonymous.yml
@@ -15,5 +15,6 @@ permissions:
   0: 'view group'
   1: 'view group_node:news entity'
   2: 'view group_node:city_service entity'
-  4: 'view group_node:guide entity'
-  5: 'view group_node:information entity'
+  3: 'view group_node:guide entity'
+  4: 'view group_node:information entity'
+  6: 'view group_node:event entity'
