POWR-233 Remove logo from group homepages

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -10,8 +10,6 @@ dependencies:
     - field.field.group.bureau_office.field_summary
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
-  module:
-    - image
 id: group.bureau_office.default
 targetEntityType: group
 bundle: bureau_office
@@ -24,15 +22,6 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
-    region: content
-  field_logo:
-    weight: 4
-    label: above
-    settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
     region: content
   field_summary:
     type: string
@@ -61,6 +50,7 @@ content:
 hidden:
   changed: true
   created: true
+  field_logo: true
   field_official_organization_name: true
   field_shortname_or_acronym: true
   uid: true
