--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -9,8 +9,6 @@ dependencies:
     - field.field.group.program.field_summary
     - field.field.group.program.field_topics
     - group.type.program
-  module:
-    - image
 id: group.program.default
 targetEntityType: group
 bundle: program
@@ -23,15 +21,6 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
-    region: content
-  field_logo:
-    weight: 4
-    label: above
-    settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
     region: content
   field_summary:
     weight: 1
@@ -60,5 +49,6 @@ content:
 hidden:
   changed: true
   created: true
+  field_logo: true
   field_shortname_or_acronym: true
   uid: true
