Hotfix-11 update composer.json to use explicit verison of Drush

--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,7 @@
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bootstrap": "^3.0",
         "drupal/views_bulk_operations": "^2.2",
-        "drush/drush": "^9.0.0",
+        "drush/drush": "9.3.0",
         "roave/security-advisories": "dev-master",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
