POWR-246 Update Drupal templates to reference updated pattern naming

--- a/web/themes/custom/rain/rain.info.yml
+++ b/web/themes/custom/rain/rain.info.yml
@@ -43,19 +43,19 @@ regions:
 # `$sourceDir` = defined in `pattern-lab/config/config.yml` under `sourceDir
 # patterns folder = `$sourceDir` + `_patterns/`
 component-libraries:
-  base:
+  utilities:
     paths:
       - source/_patterns/00-utilities
-  atoms:
+  base:
     paths:
       - source/_patterns/01-base
-  molecules:
+  elements:
     paths:
       - source/_patterns/02-elements
-  organisms:
+  components:
     paths:
       - source/_patterns/03-components
-  templates:
+  layouts:
     paths:
       - source/_patterns/04-layouts
   pages:
