POWR-262 Add group media type patch for issue 2984315.

--- a/composer.json
+++ b/composer.json
@@ -127,7 +127,9 @@
           },
           "drupal/group": {
             "2774827 - node:group functionality for adding node:group:title":
-              "https://www.drupal.org/files/issues/group_add-node-group-tokens-2774827-22.patch"
+              "https://www.drupal.org/files/issues/group_add-node-group-tokens-2774827-22.patch",
+            "2984315 - Create an enabler that will allow Media to be added as group content, and access-controlled by group permissions.":
+              "https://www.drupal.org/files/issues/2018-07-06/2984315-2.patch"
           }
         },
         "merge-plugin": {
