POWR-284 figured out how to override fonts in Sass.

--- a/web/sites/default/config/cloudy.settings.yml
+++ b/web/sites/default/config/cloudy.settings.yml
@@ -12,12 +12,13 @@ bootstrap_barrio_navbar_toggle: navbar-toggleable-lg
 bootstrap_barrio_navbar_container: 0
 bootstrap_barrio_navbar_top_position: ''
 bootstrap_barrio_navbar_top_color: navbar-dark
-bootstrap_barrio_navbar_top_background: bg-dark
+bootstrap_barrio_navbar_top_background: bg-primary
 bootstrap_barrio_navbar_position: ''
 bootstrap_barrio_navbar_color: navbar-dark
 bootstrap_barrio_navbar_background: bg-primary
+bootstrap_barrio_table_hover: 1
 _core:
-  default_config_hash: m3wyKe_RkALxbQGthRuerGkq93MGv4zpAummtv0bVuc
+  default_config_hash: 78qpB4gShKy__Mqle_dzCnNVnSf-dprQszBls-TYr5Q
 features:
   node_user_picture: true
   comment_user_picture: true
@@ -25,21 +26,19 @@ features:
   favicon: true
 logo:
   use_default: false
-  path: profiles/contrib/lightning/lightning.png
+  path: 'public://City-Portland-logotype_2.png'
 favicon:
-  use_default: false
-  path: profiles/contrib/lightning/favicon.ico
-  mimetype: image/vnd.microsoft.icon
+  use_default: true
 bootstrap_barrio_sidebar_collapse: 0
-bootstrap_barrio_navbar_top_navbar: 0
+bootstrap_barrio_navbar_top_navbar: 1
 bootstrap_barrio_navbar_top_affix: 0
 bootstrap_barrio_navbar_affix: 0
 bootstrap_barrio_sidebar_first_affix: 0
 bootstrap_barrio_sidebar_second_affix: 0
 bootstrap_barrio_scroll_spy: ''
 bootstrap_barrio_google_fonts: ''
-bootstrap_barrio_icons: ''
-bootstrap_barrio_system_messages: messages_light
+bootstrap_barrio_icons: fontawesome
+bootstrap_barrio_system_messages: ''
 bootstrap_barrio_region_clean_top_header: 0
 bootstrap_barrio_region_class_top_header: row
 bootstrap_barrio_region_clean_top_header_form: 0
@@ -52,6 +51,8 @@ bootstrap_barrio_region_clean_primary_menu: 1
 bootstrap_barrio_region_class_primary_menu: ''
 bootstrap_barrio_region_clean_secondary_menu: 0
 bootstrap_barrio_region_class_secondary_menu: row
+bootstrap_barrio_region_clean_banner_top: 0
+bootstrap_barrio_region_class_banner_top: row
 bootstrap_barrio_region_clean_page_top: 0
 bootstrap_barrio_region_class_page_top: row
 bootstrap_barrio_region_clean_page_bottom: 0
@@ -86,5 +87,4 @@ bootstrap_barrio_region_clean_footer_fifth: 0
 bootstrap_barrio_region_class_footer_fifth: row
 bootstrap_barrio_button: 0
 bootstrap_barrio_table_style: ''
-bootstrap_barrio_table_hover: 0
 bootstrap_barrio_table_head: ''
