--- a/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
@@ -13,10 +13,14 @@ targetEntityType: node
 bundle: event
 mode: teaser
 content:
+  content_moderation_control:
+    weight: -20
+    region: content
   links:
     weight: 100
     region: content
 hidden:
+  field_all_day: true
   field_body: true
   field_end_date: true
   field_end_time: true
