--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -138,8 +138,7 @@ theme:
   seven: 0
   adminimal_theme: 0
   bootstrap_barrio: 0
-  stormy: 0
-  rain: 0
+  cloudy: 0
 profile: lightning
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
