--- a/web/themes/custom/cloudy/composer.json
+++ b/web/themes/custom/cloudy/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "drupal/portland",
+    "name": "drupal/cloudy",
     "type": "drupal-theme",
     "description": "SASS subtheme for Barrio Theme.",
     "homepage": "http://drupal.org/project/portland",
