POWR-284 export config for theme changes

--- a/web/sites/default/config/block.block.cloudy_bureausandofficesbytopic.yml
+++ b/web/sites/default/config/block.block.cloudy_bureausandofficesbytopic.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_bureausandofficesbytopic
 theme: cloudy
-region: sidebar_first
-weight: -5
+region: sidebar_second
+weight: -6
 provider: null
 plugin: 'facet_block:bureaus_by_topic'
 settings:
