--- a/web/sites/default/config/bootstrap_library.settings.yml
+++ b/web/sites/default/config/bootstrap_library.settings.yml
@@ -14,10 +14,7 @@ url:
 theme:
   visibility: '1'
   themes:
-    bootstrap_barrio: bootstrap_barrio
-    portland: portland
-    rain: rain
-    stormy: stormy
+    cloudy: cloudy
 minimized:
   options: '0'
 cdn:
