--- a/web/sites/default/config/block.block.cloudy_bureausandofficesbyaudience.yml
+++ b/web/sites/default/config/block.block.cloudy_bureausandofficesbyaudience.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_bureausandofficesbyaudience
 theme: cloudy
-region: sidebar_first
-weight: -6
+region: sidebar_second
+weight: -7
 provider: null
 plugin: 'facet_block:bureaus_by_audience'
 settings:
