--- a/web/sites/default/config/block.block.cloudy_services_by_action.yml
+++ b/web/sites/default/config/block.block.cloudy_services_by_action.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_services_by_action
 theme: cloudy
-region: sidebar_first
-weight: -8
+region: sidebar_second
+weight: -9
 provider: null
 plugin: 'facet_block:services_by_action'
 settings:
