--- a/web/sites/default/config/block.block.cloudy_services_by_topic.yml
+++ b/web/sites/default/config/block.block.cloudy_services_by_topic.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_services_by_topic
 theme: cloudy
-region: sidebar_first
-weight: -7
+region: sidebar_second
+weight: -8
 provider: null
 plugin: 'facet_block:services_by_topic'
 settings:
