--- a/web/sites/default/config/block.block.cloudy_views_block__categories_on_a_node_block.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__categories_on_a_node_block.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_views_block__categories_on_a_node_block
 theme: cloudy
-region: sidebar_first
-weight: -4
+region: sidebar_second
+weight: -5
 provider: null
 plugin: 'views_block:categories_on_a_node-block_1'
 settings:
