--- a/web/sites/default/config/block.block.cloudy_views_block__group_content_menu_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__group_content_menu_block_1.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_views_block__group_content_menu_block_1
 theme: cloudy
-region: sidebar_first
-weight: -10
+region: sidebar_second
+weight: -11
 provider: null
 plugin: 'views_block:group_content_menu-block_1'
 settings:
