--- a/web/sites/default/config/block.block.cloudy_views_block__related_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__related_block_1.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_views_block__related_block_1
 theme: cloudy
-region: sidebar_first
-weight: -3
+region: sidebar_second
+weight: -4
 provider: null
 plugin: 'views_block:related-block_1'
 settings:
