--- a/web/sites/default/config/cloudy.settings.yml
+++ b/web/sites/default/config/cloudy.settings.yml
@@ -1,9 +1,9 @@
-bootstrap_barrio_library: production
-bootstrap_barrio_sidebar_position: right
+bootstrap_barrio_library: development
+bootstrap_barrio_sidebar_position: both
 bootstrap_barrio_content_offset: '0'
-bootstrap_barrio_sidebar_first_width: '3'
+bootstrap_barrio_sidebar_first_width: '2'
 bootstrap_barrio_sidebar_first_offset: '0'
-bootstrap_barrio_sidebar_second_width: '3'
+bootstrap_barrio_sidebar_second_width: '4'
 bootstrap_barrio_sidebar_second_offset: '0'
 bootstrap_barrio_fluid_container: 0
 bootstrap_barrio_button_size: ''
@@ -26,18 +26,18 @@ features:
   favicon: true
 logo:
   use_default: false
-  path: 'public://City-Portland-logotype_2.png'
+  path: themes/custom/cloudy/logo.svg
 favicon:
   use_default: true
 bootstrap_barrio_sidebar_collapse: 0
-bootstrap_barrio_navbar_top_navbar: 1
+bootstrap_barrio_navbar_top_navbar: 0
 bootstrap_barrio_navbar_top_affix: 0
 bootstrap_barrio_navbar_affix: 0
 bootstrap_barrio_sidebar_first_affix: 0
 bootstrap_barrio_sidebar_second_affix: 0
 bootstrap_barrio_scroll_spy: ''
 bootstrap_barrio_google_fonts: ''
-bootstrap_barrio_icons: fontawesome
+bootstrap_barrio_icons: ''
 bootstrap_barrio_system_messages: ''
 bootstrap_barrio_region_clean_top_header: 0
 bootstrap_barrio_region_class_top_header: row
