--- a/web/sites/default/config/system.theme.global.yml
+++ b/web/sites/default/config/system.theme.global.yml
@@ -9,8 +9,8 @@ features:
   favicon: true
   node_user_picture: true
 logo:
-  path: profiles/contrib/lightning/lightning.png
+  path: sites/default/files/City-Portland-logotype.png
   url: ''
-  use_default: true
+  use_default: false
 _core:
   default_config_hash: 9rAU4Pku7eMBQxauQqAgjzlcicFZ2As6zEa6zvTlCB8
