--- a/web/sites/default/config/views.view.group_content_banner.yml
+++ b/web/sites/default/config/views.view.group_content_banner.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.group.field_logo
-    - image.style.logo
+    - image.style.group_logo
   module:
     - group
     - image
@@ -122,7 +122,7 @@ display:
           click_sort_column: target_id
           type: image
           settings:
-            image_style: logo
+            image_style: group_logo
             image_link: content
           group_column: ''
           group_columns: {  }
