--- a/web/sites/default/config/views.view.group_content_menu.yml
+++ b/web/sites/default/config/views.view.group_content_menu.yml
@@ -55,17 +55,21 @@ display:
           items_per_page: null
           offset: 0
       style:
-        type: default
+        type: html_list
         options:
-          grouping:
-            -
-              field: label
-              rendered: true
-              rendered_strip: false
+          grouping: {  }
           row_class: ''
-          default_row_class: true
+          default_row_class: false
+          type: ul
+          wrapper_class: item-list
+          class: ''
       row:
         type: fields
+        options:
+          default_field_elements: false
+          inline: {  }
+          separator: ''
+          hide_empty: false
       fields:
         field_shortname_or_acronym:
           id: field_shortname_or_acronym
@@ -103,14 +107,14 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: ''
+          element_type: h2
           element_class: ''
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -243,18 +247,12 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          set_precision: false
-          precision: 0
-          decimal: .
-          separator: ', '
-          format_plural: 0
-          format_plural_string: !!binary MQNAY291bnQ=
-          prefix: ''
-          suffix: ''
           click_sort_column: value
           type: number_integer
-          settings: {  }
-          group_column: value
+          settings:
+            thousand_separator: ''
+            prefix_suffix: true
+          group_column: entity_id
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -262,7 +260,15 @@ display:
           delta_reversed: false
           delta_first_last: false
           multi_type: separator
+          separator: ', '
           field_api_classes: false
+          set_precision: false
+          precision: 0
+          decimal: .
+          format_plural: 0
+          format_plural_string: !!binary MQNAY291bnQ=
+          prefix: ''
+          suffix: ''
           entity_type: node
           entity_field: nid
           plugin_id: field
@@ -277,7 +283,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">{{ type }}<span class="badge badge-primary badge-pill">{{ nid }}</span></a>'
+            text: '<a href="/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}" class="d-flex justify-content-between align-items-center">{{ type }}<span class="badge badge-primary badge-pill">{{ nid }}</span></a>'
             make_link: false
             path: ''
             absolute: false
@@ -317,7 +323,7 @@ display:
           click_sort_column: target_id
           type: portland_plural_label
           settings: {  }
-          group_column: target_id
+          group_column: entity_id
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -330,20 +336,9 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: field
-      filters:
-        status:
-          value: '1'
-          table: node_field_data
-          field: status
-          plugin_id: boolean
-          entity_type: node
-          entity_field: status
-          id: status
-          expose:
-            operator: ''
-          group: 1
+      filters: {  }
       sorts: {  }
-      title: ''
+      title: Menu
       header: {  }
       footer: {  }
       empty: {  }
