--- a/web/themes/custom/cloudy/config/install/cloudy.settings.yml
+++ b/web/themes/custom/cloudy/config/install/cloudy.settings.yml
@@ -1,6 +1,6 @@
 # Library
 # --------------
-bootstrap_barrio_library: 'production'
+bootstrap_barrio_library: 'development'
 # Layout
 # --------------
 bootstrap_barrio_sidebar_position: 'both'
