--- a/web/sites/default/config/facets.facet.services_by_topic.yml
+++ b/web/sites/default/config/facets.facet.services_by_topic.yml
@@ -37,6 +37,13 @@ processor_configs:
       sort: -10
     settings:
       sort: DESC
+  count_limit:
+    processor_id: count_limit
+    weights:
+      build: 50
+    settings:
+      minimum_items: 1
+      maximum_items: null
   count_widget_order:
     processor_id: count_widget_order
     weights:
@@ -57,3 +64,4 @@ processor_configs:
     settings: {  }
 empty_behavior:
   behavior: none
+show_title: false
