--- a/web/sites/default/config/views.view.group_menu.yml
+++ b/web/sites/default/config/views.view.group_menu.yml
@@ -4,10 +4,6 @@ status: true
 dependencies:
   config:
     - field.storage.group.field_shortname_or_acronym
-    - node.type.city_service
-    - node.type.event
-    - node.type.guide
-    - node.type.news
   module:
     - group
     - node
@@ -70,15 +66,14 @@ display:
             previous: ‹‹
             next: ››
       style:
-        type: default
+        type: html_list
         options:
-          grouping:
-            -
-              field: label
-              rendered: true
-              rendered_strip: false
+          grouping: {  }
           row_class: ''
           default_row_class: false
+          type: ul
+          wrapper_class: item-list
+          class: ''
       row:
         type: fields
         options:
@@ -234,7 +229,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">{{ type }}<span class="badge badge-primary badge-pill">{{ nid }}</span></a>'
+            text: '<a href="/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}" class="d-flex justify-content-between align-items-center">{{ type }}<span class="badge badge-primary badge-pill">{{ nid }}</span></a>'
             make_link: false
             path: ''
             absolute: false
@@ -323,14 +318,14 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: ''
+          element_type: h3
           element_class: ''
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -353,50 +348,6 @@ display:
           entity_field: label
           plugin_id: field
       filters:
-        type:
-          id: type
-          table: node_field_data
-          field: type
-          relationship: gc__node
-          group_type: group
-          admin_label: ''
-          operator: in
-          value:
-            event: event
-            guide: guide
-            news: news
-            city_service: city_service
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-            argument: null
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: node
-          entity_field: type
-          plugin_id: bundle
         status:
           id: status
           table: node_field_data
@@ -507,6 +458,7 @@ display:
           plugin_id: group_id
       display_extenders: {  }
       group_by: true
+      title: Menu
     cache_metadata:
       max-age: -1
       contexts:
