--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
+    - content_moderation
     - gnode
     - group
     - node
@@ -221,14 +222,14 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: field
-        status:
-          id: status
+        moderation_state:
+          id: moderation_state
           table: node_field_data
-          field: status
+          field: moderation_state
           relationship: none
           group_type: group
           admin_label: ''
-          label: Status
+          label: 'Moderation state'
           exclude: false
           alter:
             alter_text: false
@@ -270,11 +271,8 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: boolean
-          settings:
-            format: custom
-            format_custom_true: Published
-            format_custom_false: Draft
+          type: content_moderation_state
+          settings: {  }
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -286,7 +284,6 @@ display:
           separator: ', '
           field_api_classes: false
           entity_type: node
-          entity_field: status
           plugin_id: field
         type:
           id: type
