POWR-284 updates to homepage views

--- a/web/sites/default/config/views.view.community_actions.yml
+++ b/web/sites/default/config/views.view.community_actions.yml
@@ -56,11 +56,11 @@ display:
         type: html_list
         options:
           grouping: {  }
-          row_class: 'nav-item text-sm-center card'
+          row_class: list-group-item
           default_row_class: false
           type: ul
-          wrapper_class: 'w-100 mt-3'
-          class: 'nav card-group'
+          wrapper_class: ''
+          class: list-group
       row:
         type: fields
         options:
@@ -133,7 +133,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_taxonomy_term }}" class="nav-link p-3 border border-dark bg-primary community-action h-100 align-middle">{{ name }}</a>'
+            text: '<a href="{{ view_taxonomy_term }}">{{ name }}</a>'
             make_link: false
             path: ''
             absolute: false
@@ -220,6 +220,7 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      css_class: ''
     cache_metadata:
       max-age: -1
       contexts:
