--- a/web/sites/default/config/views.view.group_services.yml
+++ b/web/sites/default/config/views.view.group_services.yml
@@ -2,9 +2,13 @@ uuid: 57520532-9664-4208-9b5e-b78a0d0822a7
 langcode: en
 status: true
 dependencies:
+  config:
+    - taxonomy.vocabulary.community_actions
+    - taxonomy.vocabulary.topics
   module:
     - group
     - node
+    - taxonomy
     - user
 id: group_services
 label: 'Group services'
@@ -429,7 +433,7 @@ display:
             title_enable: false
             title: All
           title_enable: true
-          title: '{{ arguments.gid|placeholder }} services'
+          title: 'Services from {{ arguments.gid|placeholder }}'
           default_argument_type: group_id_from_url
           default_argument_options: {  }
           default_argument_skip_url: false
@@ -459,6 +463,7 @@ display:
         - 'languages:language_interface'
         - route
         - url
+        - user
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
