--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -6,6 +6,7 @@ dependencies:
     - taxonomy.vocabulary.topics
   module:
     - taxonomy
+    - text
     - user
 id: topics
 label: Topics
@@ -56,13 +57,13 @@ display:
         type: grid
         options:
           grouping: {  }
-          columns: 4
+          columns: 2
           automatic_width: false
           alignment: horizontal
           col_class_default: false
-          col_class_custom: 'nav-item text-sm-center card'
-          row_class_default: true
-          row_class_custom: 'nav card-group'
+          col_class_custom: 'card border-0'
+          row_class_default: false
+          row_class_custom: card-group
       row:
         type: fields
         options:
@@ -124,6 +125,70 @@ display:
           absolute: false
           entity_type: taxonomy_term
           plugin_id: entity_link
+        description__value:
+          id: description__value
+          table: taxonomy_term_field_data
+          field: description__value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: true
+            text: '<p class="card-text">{{ description__value }}</p>'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: taxonomy_term
+          entity_field: description
+          plugin_id: field
         name:
           id: name
           table: taxonomy_term_field_data
@@ -135,7 +200,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_taxonomy_term }}" class="nav-link p-3 border border-dark bg-info topic h-100 align-middle">{{ name }}</a>'
+            text: "<div class=\"card-body\">\n<h3 class=\"card-title\"><a href=\"{{ view_taxonomy_term }}\">{{ name }}</a></h3>\n{{ description__value }}\n</div>"
             make_link: false
             path: ''
             absolute: false
